--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="Text" id="name" minlength="3" maxlength="50" required>
+
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id="portfolio" required>
+
+		<label for="favColor">Favorite Color</label>
+		<input type="Color" id="favColor" >
+
+		<label for="likeness">Likeness</label>
+		<input type="range" id="likeness" min="1" max="100">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
